objects/DMAPP__Foresight_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Foresight_Team__c</fullName>
        <label>Foresight Team</label>
        <referenceTo>DMAPP__Foresight_Team__c</referenceTo>
        <relationshipName>Foresight_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Foresight_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team View Team Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team View Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>